<resources>
    <string name="app_name">My Quran</string>
    <string name="title">My Quran</string>
    <string name="desc">Learn Quran and\n Recite once everyday</string>
    <string name="get_started">Get Started</string>
    <string name="quran_image">Quran Image</string>
    <string name="search">Search</string>
    <string name="salam">Assalamualaikum</string>
    <string name="last_read">Last Read</string>
    <string name="surah">Surah</string>
    <string name="surah_title">الفاتحة</string>
    <string name="loading">Loading…</string>
    <string name="play_audio">Play Audio</string>
    <string name="content_ayat">الْحَمْدُ لِلَّهِ رَبِّ الْعٰلَمِينَ</string>
    <string name="last_read_ayat">Ayat %1$d</string>
    <string name="surah_type_ayat">%1$s - %2$d AYAT</string>
    <string name="ayat_arti">[All] praise is [due] to Allah, Lord of the worlds -</string>
    <string name="search_surah">Search Surah</string>
</resources>