<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".ui.home.HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:textSize="24sp" />

<!--        <ImageButton-->
<!--            android:id="@+id/btn_search"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_vertical|end"-->
<!--            android:background="@color/white"-->
<!--            android:contentDescription="@string/search"-->
<!--            android:src="@drawable/ic_search_24" />-->

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_search_24"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/salam"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_last_read"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/ic_bg_last_read"
        android:layout_marginTop="16dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/last_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/last_read"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:drawablePadding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableLeftCompat="@drawable/ic_last_read" />

        <TextView
            android:id="@+id/tv_ayat_lastread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Ayat 1" />

        <TextView
            android:id="@+id/tv_surah_lastread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_ayat_lastread"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Al-Fatihah" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/surah"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/purple_500"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_surah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:listitem="@layout/item_surah"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/item_surah_load"/>
                <include layout="@layout/item_surah_load" />
                <include layout="@layout/item_surah_load" />
                <include layout="@layout/item_surah_load" />
                <include layout="@layout/item_surah_load" />
            </LinearLayout>
        </ScrollView>
    </com.facebook.shimmer.ShimmerFrameLayout>
</LinearLayout>